# cloud-sdk-py

./: .gitignore  README.md  pyproject.toml
cloud_sdk/: baidubce.py
examples/: text_classification.py
